tests/semantic/valid/04_float.src
fn main() -> float {
    float a = 10.5;
    float b = 3.2;
    return a + b;
}
