tests/semantic/invalid/11_duplicate_func.src
fn foo() -> int {
    return 1;
}

fn foo() -> int {
    return 2;
}

fn main() -> int {
    return foo();
}
